# boxil_crawler

./: pyproject.toml
boxil_crawler/: boxil_crawler.py
boxil_crawler/parser/: parse_service_category.py  parse_service_detail.py  parse_service_list.py  parse_service_rating.py  parse_service_review.py  parse_sitemap.py
boxil_crawler/schema/: company.py  review.py  service.py
examples/: config.toml
